--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "instock-api-vernon",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -20,9 +19,19 @@
     "express": "^4.18.2",
     "knex": "^2.3.0",
     "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/lucaslu/instock-api-vernon.git"
+  },
+  "bugs": {
+    "url": "https://github.com/lucaslu/instock-api-vernon/issues"
+  },
+  "homepage": "https://github.com/lucaslu/instock-api-vernon#readme",
+  "description": ""
 }
